Fixed resizeability issue for Javascript cell under projects, changed gap between project and contact section

--- a/styles.css
+++ b/styles.css
@@ -343,7 +343,7 @@ nav .right a span {
 
 /* SECTION 4: CONTACTS*/
 .contacts-section { 
-    margin-top: 200px;
+    margin-top: 130px;
     padding: 0 50px;
     margin-bottom: 100px;
 }
@@ -490,6 +490,22 @@ nav .right a span {
     .project-section .project-card p {
         font-size: 13px;
     }
+
+    .project-tech-icons .cell {
+        border: 2px solid #404040;
+        border-radius: 8px;
+        min-width: 40px;
+        min-height: 50px;
+    }
+
+    .project-tech-icons .cell span {
+        font-size: 12px;
+    }
+
+    .project-tech-icons .cell:nth-of-type(3) span {
+        margin-left: -10px;
+    }
+
 
     .project-tech-icons .cell:nth-of-type(3) img {
         width: 30px;
